--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JBC</title>
-    <link rel="stylesheet" href="main/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <h1>JB COMPUTERS</h1>
     <p>Anything Technology</p>
     <button onclick="displayMessage()">Click Me</button>
-    <script src="main/js/script.js"></script>
+    <script src="css/styles.css"></script>
 </body>
 </html>
