Fixing Minor Reference Issue

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h1>JB COMPUTERS</h1>
     <p>Anything Technology</p>
     <button onclick="displayMessage()">Click Me</button>
-    <script src="css/styles.css"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
