basic file update

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JBC</title>
-    <link rel="stylesheet" href="styles/styles.less">
+    <link rel="stylesheet" href="styles/main.less">
 </head>
 <body>
     <h1>JB COMPUTERS</h1>
     <p>Anything Technology</p>
-    <button onclick="displayMessage()">Click Me</button>
+    <button id="dynamic-button"></button>
     <script src="scripts/script.js"></script>
 </body>
 </html>
