--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JBC</title>
-    <link rel="stylesheet" href="styles/main.less">
+    <link rel="stylesheet" href="styles/main.css"> <!-- Use compiled CSS -->
 </head>
 <body>
-    <h1>JB COMPUTERS</h1>
-    <p>Anything Technology</p>
+    <h1></h1>
+    <p></p>
     <button id="dynamic-button"></button>
-    <script src="scripts/script.js"></script>
+    <script src="scripts/main.js"></script> <!-- Ensure the script file matches your updated file -->
 </body>
 </html>
