--- a/index.html
+++ b/index.html
@@ -10,6 +10,23 @@
     <h1></h1>
     <p></p>
     <button id="dynamic-button"></button>
-    <script src="scripts/main.js"></script> <!-- Ensure the script file matches your updated file -->
+
+    <!-- React Container -->
+    <div id="react-root"></div>
+
+    <!-- Vue Container -->
+    <div id="vue-root">
+        <p>{{ message }}</p>
+    </div>
+
+    <!-- jQuery Section -->
+    <div id="jquery-section">
+        <p id="jquery-text"></p>
+    </div>
+
+    <script src="scripts/main.js"></script>
+    <script src="scripts/react-app.js"></script>
+    <script src="scripts/vue-app.js"></script>
+    <script src="scripts/jquery-app.js"></script>
 </body>
 </html>
