--- a/index.html
+++ b/index.html
@@ -5,28 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JBC</title>
     <link rel="stylesheet" href="styles/main.css"> <!-- Use compiled CSS -->
+    <!-- React and ReactDOM via CDN -->
+    <script src="https://unpkg.com/react/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom/umd/react-dom.development.js" crossorigin></script>
+    <!-- Vue.js via CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
+    <!-- jQuery via CDN -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRKP/7LRF4X5d4fT7d6lbloU1h3pqvfH3MXjwp2l3" crossorigin="anonymous"></script>
 </head>
 <body>
+    <!-- Dynamic content that will be updated by main.js -->
     <h1></h1>
     <p></p>
     <button id="dynamic-button"></button>
 
-    <!-- React Container -->
+    <!-- React Container for react-app.js -->
     <div id="react-root"></div>
 
-    <!-- Vue Container -->
+    <!-- Vue Container for vue-app.js -->
     <div id="vue-root">
         <p>{{ message }}</p>
     </div>
 
-    <!-- jQuery Section -->
+    <!-- jQuery Section for jquery-app.js -->
     <div id="jquery-section">
         <p id="jquery-text"></p>
     </div>
 
-    <script src="scripts/main.js"></script>
-    <script src="scripts/react-app.js"></script>
-    <script src="scripts/vue-app.js"></script>
-    <script src="scripts/jquery-app.js"></script>
+    <!-- JavaScript files -->
+    <script src="scripts/main.js"></script> <!-- Main script to fetch JSON content and handle button click -->
+    <script src="scripts/react-app.js"></script> <!-- Script for React component -->
+    <script src="scripts/vue-app.js"></script> <!-- Script for Vue instance -->
+    <script src="scripts/jquery-app.js"></script> <!-- Script for jQuery initialization -->
 </body>
 </html>
