--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JBC</title>
-    <link rel="stylesheet" href="styles/main.css"> <!-- Use compiled CSS -->
+    <link rel="stylesheet" href="styles/main.css">
     <!-- React and ReactDOM via CDN -->
     <script src="https://unpkg.com/react/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom/umd/react-dom.development.js" crossorigin></script>
@@ -14,28 +14,35 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
 <body>
-    <!-- Dynamic content that will be updated by main.js -->
-    <h1></h1>
-    <p></p>
-    <button id="dynamic-button"></button>
+    <!-- Include header -->
+    <!--# include file="templates/header.html" -->
 
-    <!-- React Container for react-app.js -->
-    <div id="react-root"></div>
+    <main>
+        <h1></h1>
+        <p></p>
+        <button id="dynamic-button"></button>
 
-    <!-- Vue Container for vue-app.js -->
-    <div id="vue-root">
-        <p>{{ message }}</p>
-    </div>
+        <!-- React Container for react-app.js -->
+        <div id="react-root"></div>
 
-    <!-- jQuery Section for jquery-app.js -->
-    <div id="jquery-section">
-        <p id="jquery-text"></p>
-    </div>
+        <!-- Vue Container for vue-app.js -->
+        <div id="vue-root">
+            <p>{{ message }}</p>
+        </div>
+
+        <!-- jQuery Section for jquery-app.js -->
+        <div id="jquery-section">
+            <p id="jquery-text"></p>
+        </div>
+    </main>
+
+    <!-- Include footer -->
+    <!--# include file="templates/footer.html" -->
 
     <!-- JavaScript files -->
-    <script src="scripts/main.js"></script> <!-- Main script to fetch JSON content and handle button click -->
-    <script src="scripts/react-app.js"></script> <!-- Script for React component -->
-    <script src="scripts/vue-app.js"></script> <!-- Script for Vue instance -->
-    <script src="scripts/jquery-app.js"></script> <!-- Script for jQuery initialization -->
+    <script src="scripts/main.js"></script>
+    <script src="scripts/react-app.js"></script>
+    <script src="scripts/vue-app.js"></script>
+    <script src="scripts/jquery-app.js"></script>
 </body>
 </html>
