common: Header, Footer, Sidebar

--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
     <!-- jQuery via CDN -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <!-- Script to load partials -->
+    <script src="scripts/loadPartials.js" defer></script>
 </head>
 <body>
-    <!-- Include header -->
-    <!--# include file="templates/header.html" -->
+    <!-- Placeholder for header -->
+    <div id="header-placeholder"></div>
 
     <main>
         <h1></h1>
@@ -34,10 +36,13 @@
         <div id="jquery-section">
             <p id="jquery-text"></p>
         </div>
+
+        <!-- Placeholder for sidebar -->
+        <div id="sidebar-placeholder"></div>
     </main>
 
-    <!-- Include footer -->
-    <!--# include file="templates/footer.html" -->
+    <!-- Placeholder for footer -->
+    <div id="footer-placeholder"></div>
 
     <!-- JavaScript files -->
     <script src="scripts/main.js"></script>
