--- a/index.html
+++ b/index.html
@@ -14,8 +14,24 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
 <body>
-    <!-- Include header -->
-    <!--# include file="templates/header.html" -->
+    <!-- Inline header -->
+    <header>
+        <h1>Welcome to JB Computers</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Inline sidebar -->
+    <aside>
+        <h2>Sidebar Content</h2>
+        <p>This is the sidebar content.</p>
+    </aside>
 
     <main>
         <h1></h1>
@@ -36,8 +52,10 @@
         </div>
     </main>
 
-    <!-- Include footer -->
-    <!--# include file="templates/footer.html" -->
+    <!-- Inline footer -->
+    <footer>
+        <p>&copy; 2024 JB Computers. All rights reserved.</p>
+    </footer>
 
     <!-- JavaScript files -->
     <script src="scripts/main.js"></script>
