deleted template files and updated html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JBC</title>
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="public/styles/main.css">
     <!-- React and ReactDOM via CDN -->
     <script src="https://unpkg.com/react/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom/umd/react-dom.development.js" crossorigin></script>
@@ -20,9 +20,9 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="PAGE-2.html">About</a></li>
+                <li><a href="PAGE-3.html">Services</a></li>
+                <li><a href="PAGE-4.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -58,9 +58,9 @@
     </footer>
 
     <!-- JavaScript files -->
-    <script src="scripts/main.js"></script>
-    <script src="scripts/react-app.js"></script>
-    <script src="scripts/vue-app.js"></script>
-    <script src="scripts/jquery-app.js"></script>
+    <script src="main/scripts/main.js"></script>
+    <script src="main/scripts/react-app.js"></script>
+    <script src="main/scripts/vue-app.js"></script>
+    <script src="main/scripts/jquery-app.js"></script>
 </body>
 </html>
