moved images folder into assets

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
     </footer>
 
     <!-- JavaScript files -->
-    <script src="main/scripts/main.js"></script>
-    <script src="main/scripts/react-app.js"></script>
-    <script src="main/scripts/vue-app.js"></script>
-    <script src="main/scripts/jquery-app.js"></script>
+    <script src="public/scripts/main.js"></script>
+    <script src="public/scripts/react-app.js"></script>
+    <script src="public/scripts/vue-app.js"></script>
+    <script src="public/scripts/jquery-app.js"></script>
 </body>
 </html>
