--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JBC</title>
-    <link rel="stylesheet" href="public/styles/main.css">
+    <link rel="stylesheet" href="styles/main.css">
     <!-- React and ReactDOM via CDN -->
     <script src="https://unpkg.com/react/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom/umd/react-dom.development.js" crossorigin></script>
@@ -37,10 +37,10 @@
     <footer id="footer"></footer>
 
     <!-- JavaScript files -->
-    <script src="public/scripts/main.js"></script>
-    <script src="public/scripts/react-app.js"></script>
-    <script src="public/scripts/vue-app.js"></script>
-    <script src="public/scripts/jquery-app.js"></script>
-    <script src="public/scripts/load-content.js"></script>
+    <script src="scripts/main.js"></script>
+    <script src="scripts/react-app.js"></script>
+    <script src="scripts/vue-app.js"></script>
+    <script src="scripts/jquery-app.js"></script>
+    <script src="scripts/load-content.js"></script>
 </body>
 </html>
