--- a/public/index.html
+++ b/public/index.html
@@ -17,22 +17,36 @@
     <header id="header"></header>
     <aside id="sidebar"></aside>
     <main>
-        <h1>Main Content</h1>
-        <p>This is the main content area.</p>
-        <button id="dynamic-button">Click Me</button>
+        <section id="content">
+            <h1>Main Content</h1>
+            <p>This is the main content area.</p>
+            <button id="dynamic-button">Click Me</button>
 
-        <!-- React Container for react-app.js -->
-        <div id="react-root"></div>
+            <!-- React Container for react-app.js -->
+            <div id="react-root"></div>
 
-        <!-- Vue Container for vue-app.js -->
-        <div id="vue-root">
-            <p>{{ message }}</p>
-        </div>
+            <!-- Vue Container for vue-app.js -->
+            <div id="vue-root">
+                <p>{{ message }}</p>
+            </div>
 
-        <!-- jQuery Section for jquery-app.js -->
-        <div id="jquery-section">
-            <p id="jquery-text">Hello, jQuery!</p>
-        </div>
+            <!-- jQuery Section for jquery-app.js -->
+            <div id="jquery-section">
+                <p id="jquery-text">Hello, jQuery!</p>
+            </div>
+        </section>
+
+        <!-- Additional Content Section -->
+        <section id="extra-content">
+            <h2>Our Vision</h2>
+            <p>At JB Computers, we strive to be at the forefront of technological innovation. Our mission is to provide cutting-edge solutions that drive progress and efficiency.</p>
+            <h2>Latest News</h2>
+            <ul>
+                <li>Launching our new AI-powered chatbot to enhance customer service.</li>
+                <li>Introducing a revolutionary IoT integration platform for smart homes.</li>
+                <li>Collaborating with industry leaders to pioneer new tech advancements.</li>
+            </ul>
+        </section>
     </main>
     <footer id="footer"></footer>
 
