--- a/public/request.html
+++ b/public/request.html
@@ -9,7 +9,7 @@
         /* Overall Page Styling */
         body {
             background-color: #2e8b57; /* Dark green background */
-            color: #fff; /* White text color */
+            color: #000000; /* White text color */
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; /* Modern font */
         }
 
@@ -18,7 +18,6 @@
             max-width: 600px;
             margin: 50px auto;
             padding: 30px;
-            background: linear-gradient(135deg, #3498db, #2980b9); /* Blue gradient */
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
         }
