--- a/public/request.html
+++ b/public/request.html
@@ -8,8 +8,7 @@
     <style>
         /* Overall Page Styling */
         body {
-            background-color: #2e8b57; /* Dark green background */
-            color: #000000; /* White text color */
+            color: #0d0d0d; /* White text color */
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; /* Modern font */
         }
 
