--- a/public/request.html
+++ b/public/request.html
@@ -24,7 +24,7 @@
         .form-container h1 {
             text-align: center;
             margin-bottom: 30px;
-            color: #fff; 
+            color: #5c5c5c; 
             font-size: 2.5em; /* Larger title */
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Subtle text shadow */
         }
